# seagull

./: .gitignore  Cargo.toml  Makefile  README.md  TRAY_PLAN.md  example_sentences.txt  pyproject.toml  sentences.txt
NOTES/: cluster_usages.txt  extended-outlines.txt  extended.txt  keyboard.txt  maturin.txt  theory-plan.md
conversations/: D_BUS_NOTIFICATIONS.md  HINT_DISMISSAL_FIX.md  HINT_DISMISSAL_RACE_FIX.md  HINT_FIX_DETAILED_CHANGES.md  IMPLEMENTATION_COMPLETE.md  LLMS.md  NO_HANG.md  README_SEARCH_FEATURE.md  SEARCH_FEATURE_CODE_WALKTHROUGH.md  SEARCH_FEATURE_IMPLEMENTATION_SUMMARY.md  SEARCH_FEATURE_TEST_COVERAGE.md  SEARCH_FEATURE_USER_GUIDE.md  build_plan.md  reprocess.md
crates/seagull-tray/: Cargo.toml  Makefile  seagull-tray.desktop
crates/seagull-tray/src/: actions.rs  config.rs  ime_client.rs  main.rs  serial.rs  tray.rs
crates/seagull-tray/src/platform/: linux.rs  mod.rs
data/: README.md  base_vocab.json  basic_english_1000.txt  commands.json  fingerspell.json  punctuation.json  seagull.db.json  seagull.json  seagull_base.json  seagull_misc.json  stened.json
ime/: Cargo.toml  Makefile  README.md  seagull-ime.xml
scripts/: base_vocab_analysis.py  build_seagull.py  cluster_usages.py  cmucrossref.py  examples.py  gen_extended.py  group_inflected_vocab.py  main.py  obvious_outlines.py  onesyl.py  pronunciation_to_outline.py  random_sentence.py  validate_theory.py
seagull/: Cargo.toml
seagull-py/: Cargo.toml
theory/: adverbs.md  articles.md  basic_verbs.md  contractions.md  emoji.md  extra.md  lesson021.md  lesson022.md  lesson023.md  (+4 more)
(+37 files in other folders)
